Add intent handler for HF battery indicator (2/2)
* Modify HeadsetStateMachine to send integer indicator id and value
* Add handler for BluetoothHeadset.ACTION_HF_INDICATORS_VALUE_CHANGED
* Process indicator #2, Battery Level indicator
* Only works with HFP 1.7+ device
* Add unit test for onHfIndicatorValueChanged()
* Change RemoteDevices.mDevices to final as it should never be
  re-assigned
* Move construction of RemoteDevices in AdapterService onCreate() to
  guarantee that mReceiver in RemoteDevices is registered when
  mRemoteDevices is not null in AdapterService

Bug: 35874078
Test: make, PTS test, unit tests
runtest -c com.android.bluetooth.btservice.RemoteDevicesTest bluetooth
Change-Id: I9c37f92a9071a5f3ee288612daa0ec8d7f2fde8c